Adding more document

--- a/doc/manual.adoc
+++ b/doc/manual.adoc
@@ -5,3 +5,5 @@ This is a Users' reference manual for OAS stub.
 - <<introduction, Introduction>>
 - <<getting-started, Getting Started>>
 - <<plugin, Plugin>>
+- <<headers, HTTP headers>>
+- <<options, Options>>
