--- a/doc/manual.adoc
+++ b/doc/manual.adoc
@@ -7,3 +7,4 @@ This is a Users' reference manual for OAS stub.
 - <<plugin, Plugin>>
 - <<headers, HTTP headers>>
 - <<options, Options>>
+- <<delay, Delay>>
