--- a/doc/start.adoc
+++ b/doc/start.adoc
@@ -12,7 +12,7 @@ to upgrade the JDK version.
 ----
 <dependency>
     <groupId>io.github.ktakashi.oas.stub.spring</groupId>
-    <artifactId>oas-stub-spring</artifactId>
+    <artifactId>oas-stub-starter-web</artifactId>
     <version>${oas-stub.version}</version>
 </dependency>
 ----
@@ -35,9 +35,10 @@ application context. Below example shows how to do it:
 package oas.example;
 
 @SpringBootApplication
+@ComponentScan("io.github.ktakashi.oas") // This is required
 public class ExampleApplication {
     public static void main(String[] args) {
-        SpringApplication.run(new Class[] { ExampleApplication.class, OasApplication.class }, args);
+        SpringApplication.run(ExampleApplication.class, args);
     }
 }
 ----
