--- a/doc/start.adoc
+++ b/doc/start.adoc
@@ -12,7 +12,7 @@ to upgrade the JDK version.
 ----
 <dependency>
     <groupId>io.github.ktakashi.oas.stub.spring</groupId>
-    <artifactId>oas-stub-starter-web</artifactId>
+    <artifactId>oas-stub-spring-boot-starter-web</artifactId>
     <version>${oas-stub.version}</version>
 </dependency>
 ----
